--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,8 @@
   "short_name": "Freestyle",
   "start_url": "/",
   "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "img/icons/icon-192x192.png",
